# ChI-SOM

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
LICENSES/: copyright
acknowledgements/: index.html
docs/: README.md  acknowledgements.md  how-to-guides.md  reference.md
examples/: basic_som.py  datafile_creation.py
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
src/chisom/: __init__.py  _som.py  utils.py
src/chisom/_core/: base.py  types.py  utils.py
src/chisom/_core/cpu/: distance.py  kernel.py  trainer.py  types.py  umatrix.py
src/chisom/_core/cuda/: distance.py  trainer.py  types.py  utils.py
src/chisom/_interface/: gui.py  helpers.py  models.py
src/chisom/io/: __init__.py  _types.py  _utils.py  datastore_creation.py  datastore_factories.py  datastores.py
tests/VDR/: README.md  actives.smi
