[project]
name = "chi-som"
authors = [
    { name = "Johannes Kaminski", email = "j.kaminski@uni-muenster.de" },
    { name = "Oliver Koch", email = "okoch@uni-muenster.de" },
]
maintainers = [
    { name = "Johannes Kaminski", email = "j.kaminski@uni-muenster.de" },
]
description = "Fast self-oranizing maps for cheminformatics using numba"
requires-python = ">=3.13"
readme = "docs/README.md"
keywords = [
    "som",
    "self-organizing map",
    "machine learning",
    "rdkit",
    "cheminformatics",
    "drug discovery",
    "numba",
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",

    "Operating System :: POSIX :: Linux",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSES/*"]

version = "1.0"

dependencies = [
    "numba>=0.61.2",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "tables>=3.10.2",
    "tqdm>=4.65",
    "zarr>=3.0.8",
    "scipy>=1.15.2",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.0",
    "matplotlib>=3.10.8",
    "numpy<2.4",
]

[project.urls]
Homepage = "https://kochlab.org"
Documentation = "https://kochgroup.github.io/ChI-SOM"
Repository = "https://github.com/kochgroup/ChI-SOM"
Issues = "https://github.com/kochgroup/ChI-SOM/issues"


[dependency-groups]
dev = [
    "ty>=0.0.12",
    "pytest>=8.3.5",
    "ruff>=0.14.13",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.21",
    "mkdocs-material>=9.7.0",
    "mkdocs-macros-plugin>=1.5.0",
    "types-tqdm>=4.67.3.20260303",
    "scipy-stubs>=1.17.1.0",
    "pandas-stubs>=3.0.0.260204",
]

[project.optional-dependencies]
cu12 = ["numba-cuda[cu12]>=0.20.0,<0.25.0"]
cu13 = ["numba-cuda[cu13]>=0.20.0,<0.25.0"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "chisom"

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [[{ extra = "cu12" }, { extra = "cu13" }]]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
